dist/1.0/bin/sample/retrieveUnpackaged/objects/External_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account related to External Attachment</description>
        <inlineHelpText>Account related to External Attachment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <description>Contract (custom) related to External Attachment</description>
        <inlineHelpText>Contract (custom) related to External Attachment</inlineHelpText>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case related to External Attachment</description>
        <inlineHelpText>Case related to External Attachment</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cession_Account__c</fullName>
        <description>Cession Account related to External Attachment</description>
        <inlineHelpText>Cession Account related to External Attachment</inlineHelpText>
        <label>Cession Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Attachments (Cession Account)</relationshipLabel>
        <relationshipName>External_Attachments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact related to External Attachment</description>
        <inlineHelpText>Contact related to External Attachment</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Contract related to External Attachment</description>
        <inlineHelpText>Contract related to External Attachment</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Ext_Contact__c</fullName>
        <description>Extranet User (as Contact in SFDC) which created record</description>
        <inlineHelpText>Extranet User (as Contact in SFDC) which created record</inlineHelpText>
        <label>Created By Extranet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Attachments (Created By Extranet Contact)</relationshipLabel>
        <relationshipName>External_Attachments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which created record</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which created record</inlineHelpText>
        <label>Created By Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <description>SFDC User which created this record</description>
        <inlineHelpText>SFDC User which created this record</inlineHelpText>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date when the attachment was created</description>
        <inlineHelpText>Date when the attachment was created</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Desciption of this attachment</description>
        <inlineHelpText>Desciption of this attachment</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>Type of document stored as a attachment</description>
        <inlineHelpText>Type of document stored as a attachment</inlineHelpText>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Order Form (SOF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms of Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>Document Number from related Contract (custom)</description>
        <formula>CContract__r.Document_Number__c</formula>
        <inlineHelpText>Document Number from related Contract (custom)</inlineHelpText>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extranet_Impersonated_By_Username__c</fullName>
        <description>Extranet Impersonated By User (as Contact in SFDC) which created record</description>
        <inlineHelpText>Extranet Impersonated By User (as Contact in SFDC) which created record</inlineHelpText>
        <label>Extranet Impersonated By Username</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Attachments (Extranet Impersonated By Username)</relationshipLabel>
        <relationshipName>External_Attachments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Link__c</fullName>
        <description>Hyperlink to attached file</description>
        <formula>HYPERLINK(&quot;https://extranet.gtsce.com/attachments/&quot;+File_URL__c, &quot;Attachment File&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hyperlink to attached file</inlineHelpText>
        <label>File Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Name of the attached file</description>
        <inlineHelpText>Name of the attached file</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <description>Path to attachment in remote attachment storage</description>
        <inlineHelpText>Path to attachment in remote attachment storage</inlineHelpText>
        <label>File URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impersonated_By_Username__c</fullName>
        <description>Name of Extranet user who added this attachment while impersonating other user.</description>
        <inlineHelpText>Name of Extranet user who added this attachment while impersonating other user.</inlineHelpText>
        <label>Extranet Impersonated By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selcted the document is available externally i.e. through portals for Partners, Customers</description>
        <inlineHelpText>When selcted the document is available externally i.e. through portals for Partners, Customers</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>Lead related to External Attachment</description>
        <inlineHelpText>Lead related to External Attachment</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity related to External Attachment</description>
        <inlineHelpText>Opportunity related to External Attachment</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Order Line related to External Attachment</description>
        <inlineHelpText>Order Line related to External Attachment</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order related to External Attachment</description>
        <inlineHelpText>Order related to External Attachment</inlineHelpText>
        <label>Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Calculation__c</fullName>
        <description>Lookup to BCT Calculation object</description>
        <inlineHelpText>Lookup to BCT Calculation object</inlineHelpText>
        <label>SFDC Calculation</label>
        <referenceTo>SFDC_Calculation__c</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>Task related to External Attachment</description>
        <inlineHelpText>Task related to External Attachment</inlineHelpText>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>External_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <description>View link to attachment; used on related lists on objects related to External Attachments</description>
        <formula>HYPERLINK(&apos;https://emea.salesforce.com/apex/viewExternalAttachment?id=&apos; + Id, &apos;View&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View link to attachment</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>External Attachment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>